Use Java 8 compatible API, Resolve many version mismatches